--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, inicial-scale=1">
 
+        <title>Appilicous</title>
+        <link rel="stylesheet" href="scss/main.css">
+
+        <script src="https://kit.fontawesome.com/7408573c58.js" crossorigin="anonymous"></script>
+
+    </head>
+
+    <body>
+        <header class="main-header">
+            <div class="container grid">
+
+                <div class="logo col">
+                    <img src="img/logo.svg" alt="Appilicous">
+                </div>
+
+                <nav class="main-nav col">
+                    <ul class="nav-list">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Pricing</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+
+            </div>    
+        </header>
+        
+        <!-- Hero area
+        ========================= -->
+
+        <section class="hero">
+            <div class="container grid">
+
+
+                <div class="hero-text col">
+                    <h1 class="title-large"><span>Take your app to the</span> next level</h1>
+
+                    <p class="text-intro">The perfect landing page for you app, whatever it might be. Show off the app features, show some sexy pictures and get more people to download it today.</p>
+
+                    <a href="" class="btn btn--secondary">Learn More</a>
+
+                    <a href="" class="btn btn--primary">Get the App</a>
+                </div>
+
+                <div class="col">
+                    <img src="img/phone.png" alt="" class="hero-img">
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Sales Points
+        ========================= -->
+
+        <section class="sales-points">
+            <div class="container grid">
+                <h1>Promote your app</h1>
+
+                <div class="sales-points col">
+                    <img src="img/sales-responsive.png" alt="">
+                    <h2></h2>
+                    <p></p>
+                </div>
+                <div class="sales-points col">
+                    <img src="img/sales-hand.png" alt="">
+                    <h2></h2>
+                    <p></p>
+                </div>
+                <div class="sales-points col">
+                    <img src="img/sales-graph.png" alt="">
+                    <h2></h2>
+                    <p></p>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- promo section
+        ========================= -->
+
+        <section class="promo">
+
+            <div class="grid">
+
+                <div class="title-box">
+                    <h1>This app is amazing</h1>
+                    <p>It does everything you didn't know an app needed to do.</p>
+                </div>
+                    
+                <div class="col">
+                    <h1>Doing great things for you</h1>
+                    <h2>Lorem ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto commodi cumque? Cum molestias libero dolorum illum odio soluta fugit doloribus enim animi. Modi sint eaque minus recusandae iure quibusdam.</p>
+                    <a href="" class="btn btn--primary">Get the App</a>
+                </div>
+
+                <div class="col img-box">
+                    <img src="img/phone-in-hand.jpg" alt="A hand holding a phone">
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- CTA
+        ========================= -->
+
+        <section class="cta">
+            <p class="text-large">You made to the bottom and you still aren't sure?</p>
+            <h1 class="title-large">showcase you greatness today</h1>
+            <a href="" class="btn btn--primary">Get the app</a>
+        </section>
+
+        <!-- Footer
+        ========================= -->
+
+        <footer>
+
+            <div class="container">
+
+                <p></p>
+
+                <ul class="unstyled-list social-links">
+                    <li><a href=""><i class="fa-brands fa-twitter-square"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook-square"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                </ul>
+
+            </div>
+
+                <ul class="unstyled-list nav-footer">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Contact</a></li>    
+                </ul>
+
+        </footer>
+
+    </body>
+
+</html>
