--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, inicial-scale=1">
 
         <title>Appilicous</title>
-        <link rel="stylesheet" href="scss/main.css">
+        
+        <link rel="stylesheet" href="css/main.css">
 
         <script src="https://kit.fontawesome.com/7408573c58.js" crossorigin="anonymous"></script>
 
