--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
         <script src="https://kit.fontawesome.com/7408573c58.js" crossorigin="anonymous"></script>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
