--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     </ul>
                 </nav>
 
+                <div class="nav-toggle">
+                    <div class="hamburger"></div>
+                </div>
+
             </div>    
         </header>
         
